--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"bootstrap-icons": "^1.11.3",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
+		"react-bootstrap": "^2.10.7",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
