--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		]
 	},
 	"dependencies": {
+		"@emailjs/browser": "^4.4.1",
 		"bootstrap": "^5.3.3",
 		"bootstrap-icons": "^1.11.3",
 		"prop-types": "^15.6.1",
